--- a/src/components/CategoryPreview/category-preview.scss
+++ b/src/components/CategoryPreview/category-preview.scss
@@ -7,6 +7,13 @@
     font-size: 28px;
     margin-bottom: 25px;
     cursor: pointer;
+
+    &:hover {
+      color:dodgerblue;
+    }
+    &:active {
+      color:darkblue;
+    }
   }
 
   .preview {
